--- a/index.html
+++ b/index.html
@@ -15,12 +15,11 @@
         </div>
         <div class="box__input first">
           <form>
-            <input type="number" id="first-value" />
             <label for="first-value" class="first-label">Fahrenheit</label>
+            <input type="number" id="first-value" />
           </form>
         </div>
       </div>
-      <div class="box__logo"><img src="images/icon_vs.png" alt="VS" /></div>
       <div class="box">
         <div class="box__photo">
           <img src="images/c.jpg" alt="Celsius" />
@@ -29,6 +28,17 @@
           <form>
             <label for="second-value" class="second-label">Celsius</label>
             <input type="number" id="second-value" />
+          </form>
+        </div>
+      </div>
+      <div class="box">
+        <div class="box__photo">
+          <img src="images/k.jpg" alt="Kelvin" />
+        </div>
+        <div class="box__input third">
+          <form>
+            <label for="third-value" class="third-label">Kelvin</label>
+            <input type="number" id="third-value" />
           </form>
         </div>
       </div>
